--- a/map.html
+++ b/map.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8' />
-    <title>FS</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+<meta charset=utf-8 />
+<title>Places from Foursquare</title>
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+<style>
+  body { margin:0; padding:0; }
+  #map { position:absolute; top:0; bottom:0; width:100%; }
+</style>
 </head>
 <body>
+
+
+<div id='map'></div>
+
+<!-- jQuery is required for this example. -->
+<script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 <script>
+L.mapbox.accessToken = '<your access token here>';
+var map = L.mapbox.map('map', 'mapbox.emerald')
+    .setView([40, -74.50], 10);
+
+// Credit Foursquare for their wonderful data
+map.attributionControl
+    .addAttribution('<a href="https://foursquare.com/">Places data from Foursquare</a>');
+
+// https://developer.foursquare.com/start/search
+var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
+  // '?client_id=CLIENT_ID' +
+  // '&client_secret=CLIENT_SECRET' +
+  '&oauth_token=' + fsToken +
+  '&v=20130815' +
+  '&ll=LATLON' +
+  '&query=coffee' +
+  '&callback=?';
 
 function getQueryVariable(variable) {
     var query = window.location.hash.substring(1);
@@ -24,18 +52,48 @@ function getQueryVariable(variable) {
 var fsToken = getQueryVariable('access_token');
 
 
-var API_ENDPOINT = 'https://api.foursquare.com/v2/users/self/venuelikes?ll=45,-122.5' +
-  '&oauth_token=' + fsToken +
-  '&v=20161020';
+// var API_ENDPOINT = 'https://api.foursquare.com/v2/users/self/venuelikes?ll=45,-122.5' +
+  // '&oauth_token=' + fsToken +
+//   '&v=20161020';
 
 
-$.getJSON(API_ENDPOINT, { dataType: "JSONP" }, function(json){ 
-        var parsed = JSON.parse(json);
-        console.log(parsed);
-        access_token = parsed.access_token;
-    });
 
 
+// $.getJSON(API_ENDPOINT, { dataType: "JSONP" }, function(json){ 
+//         var parsed = JSON.parse(json);
+//         console.log(parsed);
+//         access_token = parsed.access_token;
+//     });
+
+// Keep our place markers organized in a nice group.
+var foursquarePlaces = L.layerGroup().addTo(map);
+
+// Use jQuery to make an AJAX request to Foursquare to load markers data.
+$.getJSON(API_ENDPOINT
+    .replace('CLIENT_ID', CLIENT_ID)
+    .replace('CLIENT_SECRET', CLIENT_SECRET)
+    .replace('LATLON', map.getCenter().lat +
+        ',' + map.getCenter().lng), function(result, status) {
+
+    if (status !== 'success') return alert('Request to Foursquare failed');
+
+    // Transform each venue result into a marker on the map.
+    for (var i = 0; i < result.response.venues.length; i++) {
+      var venue = result.response.venues[i];
+      var latlng = L.latLng(venue.location.lat, venue.location.lng);
+      var marker = L.marker(latlng, {
+          icon: L.mapbox.marker.icon({
+            'marker-color': '#BE9A6B',
+            'marker-symbol': 'cafe',
+            'marker-size': 'large'
+          })
+        })
+      .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
+        venue.name + '</a></strong>')
+        .addTo(foursquarePlaces);
+    }
+
+});
 
 </script>
 
