--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Place this anchor tag where you want the button to go -->
 <div id="main">
 
-<a href="https://foursquare.com/oauth2/authenticate?client_id=IKKT15OLUURMKQIIT0XPA1W2AUFBEUFL44NUAIRA31IONXWC&response_type=token&redirect_uri=https://geografa.github.io/cams/fs.html" >Log into Foursquare</a>
+<a href="https://foursquare.com/oauth2/authenticate?client_id=IKKT15OLUURMKQIIT0XPA1W2AUFBEUFL44NUAIRA31IONXWC&response_type=token&redirect_uri=https://geografa.github.io/favr/maps.html" >Log into Foursquare</a>
 
 <!-- <a href="https://foursquare.com/intent/venue.html" class="fourSq-widget" data-variant="wide">Save to Foursquare</a> -->
 </div>
