--- a/map.html
+++ b/map.html
@@ -41,59 +41,47 @@ function getQueryVariable(variable) {
 
 var fsToken = getQueryVariable('access_token');
 
-// https://developer.foursquare.com/start/search
-var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
-  // '?client_id=CLIENT_ID' +
-  // '&client_secret=CLIENT_SECRET' +
+var API_ENDPOINT = 'https://api.foursquare.com/v2/users/self/venuelikes?ll=45,-122.5' +
   '&oauth_token=' + fsToken +
-  '&v=20130815' +
-  '&ll=LATLON' +
-  '&query=coffee' +
-  '&callback=?';
-
-// var API_ENDPOINT = 'https://api.foursquare.com/v2/users/self/venuelikes?ll=45,-122.5' +
-  // '&oauth_token=' + fsToken +
-//   '&v=20161020';
+  '&v=20161020';
 
 
 
 
-// $.getJSON(API_ENDPOINT, { dataType: "JSONP" }, function(json){ 
-//         var parsed = JSON.parse(json);
-//         console.log(parsed);
-//         access_token = parsed.access_token;
-//     });
+$.getJSON(API_ENDPOINT, { dataType: "JSONP" }, function(json){ 
+        var parsed = JSON.parse(json);
+        console.log(parsed);
+        access_token = parsed.access_token;
+    });
 
 // Keep our place markers organized in a nice group.
-// var foursquarePlaces = L.layerGroup().addTo(map);
+var foursquarePlaces = L.layerGroup().addTo(map);
 
 // Use jQuery to make an AJAX request to Foursquare to load markers data.
 
-// $.getJSON(API_ENDPOINT
-//     .replace('CLIENT_ID', CLIENT_ID)
-//     .replace('CLIENT_SECRET', CLIENT_SECRET)
-//     .replace('LATLON', map.getCenter().lat +
-//         ',' + map.getCenter().lng), function(result, status) {
+$.getJSON(API_ENDPOINT
+    .replace('LATLON', map.getCenter().lat +
+        ',' + map.getCenter().lng), function(result, status) {
 
-//     if (status !== 'success') return alert('Request to Foursquare failed');
+    if (status !== 'success') return alert('Request to Foursquare failed');
 
-//     // Transform each venue result into a marker on the map.
-//     for (var i = 0; i < result.response.venues.length; i++) {
-//       var venue = result.response.venues[i];
-//       var latlng = L.latLng(venue.location.lat, venue.location.lng);
-//       var marker = L.marker(latlng, {
-//           icon: L.mapbox.marker.icon({
-//             'marker-color': '#BE9A6B',
-//             'marker-symbol': 'cafe',
-//             'marker-size': 'large'
-//           })
-//         })
-//       .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
-//         venue.name + '</a></strong>')
-//         .addTo(foursquarePlaces);
-//     }
+    // Transform each venue result into a marker on the map.
+    for (var i = 0; i < result.response.venues.length; i++) {
+      var venue = result.response.venues[i];
+      var latlng = L.latLng(venue.location.lat, venue.location.lng);
+      var marker = L.marker(latlng, {
+          icon: L.mapbox.marker.icon({
+            'marker-color': '#BE9A6B',
+            'marker-symbol': 'cafe',
+            'marker-size': 'large'
+          })
+        })
+      .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
+        venue.name + '</a></strong>')
+        .addTo(foursquarePlaces);
+    }
 
-// });
+});
 
 </script>
 
