--- a/map.html
+++ b/map.html
@@ -45,41 +45,28 @@ var API_ENDPOINT = 'https://api.foursquare.com/v2/users/self/venuelikes?ll=45,-1
   '&oauth_token=' + fsToken +
   '&v=20161020';
 
-
-
-
-// $.getJSON(API_ENDPOINT, { dataType: "JSONP" }, function(json){ 
-//         var parsed = JSON.parse(json);
-//         console.log(parsed);
-//         access_token = parsed.access_token;
-//     });
-
 // Keep our place markers organized in a nice group.
 var foursquarePlaces = L.layerGroup().addTo(map);
 
 // Use jQuery to make an AJAX request to Foursquare to load markers data.
 
-$.getJSON(API_ENDPOINT
-    .replace('LATLON', map.getCenter().lat +
-        ',' + map.getCenter().lng), function(result, status) {
-
-    if (status !== 'success') return alert('Request to Foursquare failed');
-
-    // Transform each venue result into a marker on the map.
-    for (var i = 0; i < result.response.venues.length; i++) {
-      var venue = result.response.venues[i];
-      var latlng = L.latLng(venue.location.lat, venue.location.lng);
-      var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#BE9A6B',
-            'marker-symbol': 'cafe',
-            'marker-size': 'large'
-          })
-        })
-      .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
-        venue.name + '</a></strong>')
-        .addTo(foursquarePlaces);
-    }
+$.getJSON(API_ENDPOINT, function(result, status) {
+        // Transform each venue result into a marker on the map.
+        for (var i = 0; i < result.response.venues.items.length; i++) {
+          var venue = result.response.venues.items[i];
+          console.log(venue);
+          var latlng = L.latLng(venue.location.lat, venue.location.lng);
+          var marker = L.marker(latlng, {
+              icon: L.mapbox.marker.icon({
+                'marker-color': '#BE9A6B',
+                'marker-symbol': 'cafe',
+                'marker-size': 'large'
+              })
+            })
+          .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
+            venue.name + '</a></strong>')
+            .addTo(foursquarePlaces);
+        }
 
 });
 
