updates map and center

--- a/map.html
+++ b/map.html
@@ -20,8 +20,8 @@
 <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiY2lvZjU0NnRqMDB0cnVwbTM3MmZjeGxxZiJ9.HG76QROZVWnTf9jQ9ZKWDw';
-var map = L.mapbox.map('map', 'mapbox.emerald')
-    .setView([40, -74.50], 10);
+var map = L.mapbox.map('map', 'grafa.f80610c8')
+    .setView([37.75979065676546,-122.43224143981934], 13);
 
 // Credit Foursquare for their wonderful data
 map.attributionControl
