--- a/map.html
+++ b/map.html
@@ -58,8 +58,8 @@ $.getJSON(API_ENDPOINT, function(result, status) {
           var latlng = L.latLng(venue.location.lat, venue.location.lng);
           var marker = L.marker(latlng, {
               icon: L.mapbox.marker.icon({
-                'marker-color': '#BE9A6B',
-                'marker-symbol': 'cafe',
+                'marker-color': '#02bfff',
+                'marker-symbol': 'circle',
                 'marker-size': 'large'
               })
             })
