--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Save to Foursquare</title>
+<title>Places from Foursquare</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-
+<script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
 <style>
-#main {margin: 40px;}
-
+  body { margin:0; padding:0; }
+  #map { position:absolute; top:0; bottom:0; width:100%; }
+  img.center {
+   position: absolute;
+   top: 50%;
+   left: 45%;
+   z-index: 99;
+}
 </style>
 </head>
 <body>
+<body>
 
 <!-- Place this anchor tag where you want the button to go -->
-<div id="main">
 
-<a href="https://foursquare.com/oauth2/authenticate?client_id=IKKT15OLUURMKQIIT0XPA1W2AUFBEUFL44NUAIRA31IONXWC&response_type=token&redirect_uri=https://geografa.github.io/favr/map.html" ><img src="./assets/img/Connect-to-Foursquare-150.png"></a>
+<a href="https://foursquare.com/oauth2/authenticate?client_id=IKKT15OLUURMKQIIT0XPA1W2AUFBEUFL44NUAIRA31IONXWC&response_type=token&redirect_uri=https://geografa.github.io/favr/map.html" ><img class='center' src="./assets/img/Connect-to-Foursquare-150.png"></a>
 
 <!-- <a href="https://foursquare.com/intent/venue.html" class="fourSq-widget" data-variant="wide">Save to Foursquare</a> -->
-</div>
+
+
+<div id='map'></div>
+<script>
+L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiZjk3Mjk2YWYzZTNlYjM3ODdlNzJlOWJlM2VjZGI0ZDEifQ.OTT9oT7CqAc9vZsnJLT51Q';
+var map = L.mapbox.map('map', 'grafa.f80610c8')
+    .setView([37.75979065676546,-122.43224143981934], 13);
+</script>
 
 <!-- Place this script somewhere after the anchor tag above. If you have multiple buttons, only include the script once. -->
 <script type='text/javascript'>
