--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div id='map'></div>
 <script>
-L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiZjk3Mjk2YWYzZTNlYjM3ODdlNzJlOWJlM2VjZGI0ZDEifQ.OTT9oT7CqAc9vZsnJLT51Q';
+L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiY2l1amhpd2l6MDBuNDJ6b2R4bDA3cGR4biJ9.zFkPzpsqDmKf5i8lqoslew';
 var map = L.mapbox.map('map', 'grafa.f80610c8')
     .setView([37.75979065676546,-122.43224143981934], 13);
 </script>
