--- a/map.html
+++ b/map.html
@@ -37,7 +37,7 @@
 <!-- jQuery is required for this example. -->
 <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 <script>
-L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiY2lvZjU0NnRqMDB0cnVwbTM3MmZjeGxxZiJ9.HG76QROZVWnTf9jQ9ZKWDw';
+L.mapbox.accessToken = 'pk.eyJ1IjoiZ3JhZmEiLCJhIjoiY2l1amhpd2l6MDBuNDJ6b2R4bDA3cGR4biJ9.zFkPzpsqDmKf5i8lqoslew';
 var map = L.mapbox.map('map', 'grafa.f80610c8')
     .setView([37.75979065676546,-122.43224143981934], 13);
 var myLayer = L.mapbox.featureLayer().addTo(map);
